--- a/src/pages/developing/frameworks/react.mdx
+++ b/src/pages/developing/frameworks/react.mdx
@@ -2,16 +2,16 @@
 title: Frameworks
 description:
   The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, and Vue.
-tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Other frameworks']
+  the system in vanilla JS, Angular, Vue, and Svelte.
+tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Svelte', 'Other frameworks']
 ---
 
 <PageDescription>
 
-The Carbon React library provides front-end developers & engineers a collection of reusable
-React components to build websites and user interfaces. Adopting the library
-enables developers to use consistent markup, styles, and behavior in prototype
-and production work.
+The Carbon React library provides front-end developers and engineers a collection
+of reusable React components to build websites and user interfaces. Adopting the
+library enables developers to use consistent markup, styles, and behavior in
+prototype and production work.
 
 </PageDescription>
 
