docs(accordion): remove size variant

--- a/src/pages/components/accordion/code.mdx
+++ b/src/pages/components/accordion/code.mdx
@@ -61,7 +61,7 @@ usage documentation, see the Storybooks for each framework below.
   <ComponentVariant
     id="accordion"
     knobs={{
-      Accordion: ['align', 'disabled', 'size'],
+      Accordion: ['align', 'disabled'],
       AccordionItem: ['open', 'disabled'],
     }}
     links={{
