--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -58,7 +58,7 @@ extra click; instead use a full scrolling page with normal headers.
   <ComponentVariant
     id="accordion"
     knobs={{
-      Accordion: ['align', 'disabled', 'size'],
+      Accordion: ['align', 'disabled'],
       AccordionItem: ['open', 'disabled'],
     }}
     links={{
