--- a/src/pages/guidelines/content/overview.mdx
+++ b/src/pages/guidelines/content/overview.mdx
@@ -1,31 +1,34 @@
 ---
 title: Content
 description:
-  Words form the conversation a user has with a product, working with the visual
-  elements and interactions to form a cohesive and tight experience.
-  Well-designed content empowers people to use our offerings with ease. These
+  Well-designed content empowers people to use our offerings with ease. Words
+  form the conversation a user has with a product, working with the visual
+  elements and interactions to form a cohesive and tight experience. These
   content guidelines have been developed from real-life examples to ensure the
   words in your product interfaces and documentation create the best possible
   experience for your users.
-tabs: ['Overview', 'Guidance', 'Action labels']
+tabs:
+  [
+    'Overview',
+    'Guidance',
+    'Content patterns',
+    'Principles',
+    'Mechanics',
+    'Action labels',
+  ]
 ---
 
 <PageDescription>
 
-Well-designed content empowers people to use our offerings with ease. Words form
-the conversation a user has with a product, working with the visual elements and
-interactions to form a cohesive and tight experience.
-
-These content guidelines have been developed from real-life examples to help
-ensure the words you choose for your product interfaces create the best possible
-experience for your users.
+Well-designed content empowers people to use our offerings with ease. These
+guidelines have been developed from real-life examples and are for everyone who
+is writing or reviewing copy in IBM product interfaces.
 
 </PageDescription>
 
 <AnchorLinks>
 
-<AnchorLink>Introduction</AnchorLink>
-<AnchorLink>Foundations</AnchorLink>
+<AnchorLink>Content foundations</AnchorLink>
 <AnchorLink>Voice and tone</AnchorLink>
 <AnchorLink>Conversational style</AnchorLink>
 <AnchorLink>Writing for accessibility</AnchorLink>
@@ -33,33 +36,21 @@ experience for your users.
 
 </AnchorLinks>
 
-## Introduction
+## Content foundations
 
-These guidelines are for everyone who is writing or reviewing copy in IBM
-product interfaces. The best UX writing happens when content designers work
-together with visual and experience designers, developers, and offering managers
-ensuring that all elements of the communication are considered and tailored to
-the goals of the user.
-
-Content experiences will vary for each use case and persona, but the basic
-guidelines for consistency and terminology hold true for all user types and
-that's what you'll find here.
-
-## Foundations
-
-Familiarity with key IBM guidance is essential to creating experiences that
-represent IBM, are consistent, and provide an interoperability of experience
-with other offerings.
+Familiarity with key IBM guidance is essential to creating experiences that are
+consistent, that provide an interoperability of experience with other offerings,
+and that represent IBM as a company.
 
 The Carbon content guidelines are built upon and informed by the following
 foundational IBM assets.
 
-| Resources                                                                                                       | What you'll find                                                                                                                                                                                                                                                     |
-| --------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| _[IBM Style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa)_ | IBM Style is the corporate reference for all IBM writers and editors to ensure that content for external audiences is grammatically correct, clear, consistent, appropriate for global audiences, and easy to translate. It applies to all content published by IBM. |
-| _[IBM Design Language](https://www.ibm.com/design/language/)_                                                   | The IBM Design Language provides the guidance and assets used to express the IBM brand. Take the time to read this guidance so that you fully understand what drives IBM’s design philosophy and principles, and can make informed choices in your product work.     |
-| _[IBM Brand Center](https://www.ibm.com/brand/definition)_                                                      | IBM Brand Center provides you with a home base for the IBM Brand story, visual brand elements, guidelines, and assets.                                                                                                                                               |
-| _[IBM Brand Systems](https://www.ibm.com/brand/systems/)_                                                       | The IBM brand systems have been developed for various IBM businesses, audiences, categories, and offerings. Read them to understand the rationale behind every visual and verbal detail, so that the guidance may inform your work.                                  |
+| Resources                                                                                                       | What you'll find                                                                                                                                                                                                                                                                     |
+| --------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| _[IBM Style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa)_ | IBM Style is the corporate reference for all IBM writers and editors and applies to all content published by IBM. Its purpose is to ensure that content for external audiences is grammatically correct, clear, consistent, appropriate for global audiences, and easy to translate. |
+| _[IBM Design Language](https://www.ibm.com/design/language/)_                                                   | The IBM Design Language provides the guidance and assets used to express the IBM brand. You'll fully understand what drives IBM’s design philosophy and principles, and be in a position to make informed choices for your product work.                                             |
+| _[IBM Brand Center](https://www.ibm.com/brand/definition)_                                                      | IBM Brand Center is the home base for the IBM Brand story, visual brand elements, guidelines, and assets.                                                                                                                                                                            |
+| _[IBM Brand Systems](https://www.ibm.com/brand/systems/)_                                                       | The IBM brand systems have been developed for various IBM businesses, audiences, categories, and offerings. Read them to understand the rationale behind every visual and verbal detail, so that the guidance may inform your work.                                                  |
 
 ## Voice and tone
 
@@ -70,8 +61,8 @@ or written, one of the most important characteristics of IBM is our unique brand
 voice. Our verbal identity must remain as recognizable to everyone as our visual
 identity.
 
-Understanding IBM's personality can help you reach for the best word when making
-choices as you develop content.
+Understanding IBM's personality can help you reach for the best words as you
+develop content.
 
 IBM Brand Center offers the following guidelines on voice.
 
@@ -92,12 +83,12 @@ For additional guidance, please read the IBM Brand Center
 
 ### Tone
 
-Tone describes how voice is expressed and it adapts to different situations. For
-example, the words chosen for error messages differ greatly from words you might
-see in an onboarding flow. The tone of error messages is economical and direct,
-and they are often written in short phrases instead of sentences. Onboarding
-flows typically take a little more time, with full sentences and friendly
-explanations.
+Tone describes how the IBM voice is expressed, and as such it can adapt to
+different situations. For example, the words chosen for error messages differ
+greatly from words you might see in an onboarding flow. The tone of error
+messages is economical and direct, and they are often written in short phrases
+instead of sentences. Onboarding flows typically take a little more time, with
+full sentences and friendly explanations.
 
 The underlying voice in each case is consistent but with different word choices
 and a different sentence structure, the style and tone adapts.
@@ -142,3 +133,102 @@ about a particular use case, you can ask questions in the
 [Carbon Slack channel](#carbon-design-system), open a Github issue, or connect
 with us in one of our
 [meetups](https://www.carbondesignsystem.com/whats-happening/meetups).
+
+<div>
+<Row class="narrativeTable">
+
+<Column colLg={4} noGutter>
+
+### Engineered
+
+</Column>
+
+<Column colLg={8} noGutter>
+
+IBM illustrations should feel engineered with a strong sense of balance and
+control. Precise use of the grid, along with consistent shapes, angles and
+radii, help define a particular aesthetic that’s critical in expressing the
+“IBMness” of our illustrations and reveals a well-considered and systematic
+approach.
+
+</Column>
+
+</Row>
+
+<Row class="narrativeTable">
+
+<Column colLg={4} noGutter>
+
+### Clear
+
+</Column>
+
+<Column colLg={8} noGutter>
+
+IBM illustration should never work too hard or be burdened with too many ideas.
+Only essential, non-decorative, elements should be used to communicate the main
+idea. Keeping an illustration simple and straightforward adds clarity. This
+simplicity helps guide viewers through complex concepts, stories or scenarios.
+
+</Column>
+
+</Row>
+
+<Row class="narrativeTable">
+
+<Column colLg={4} noGutter>
+
+### Nimble
+
+</Column>
+
+<Column colLg={8} noGutter>
+
+IBM illustrations should display a sense of ease, lightness and nimbleness. This
+nimble sense of composition, space, weight and orderliness will help the viewer
+intake complexity with ease. A nimble quality also adds a great sense of
+activity and liveliness in the illustration.
+
+</Column>
+
+</Row>
+
+<Row class="narrativeTable">
+
+<Column colLg={4} noGutter>
+
+### Diverse
+
+</Column>
+
+<Column colLg={8} noGutter>
+
+We take great pride in our commitment to diversity and inclusion and IBM
+illustrations should be created in the same spirit. Gender, cultural and
+geographical diversity should always be considered when creating illustrations
+so that we strive for inclusion, representation and accessibility for all.
+
+</Column>
+
+</Row>
+
+<Row class="narrativeTableLast">
+
+<Column colLg={4} noGutter>
+
+### Delightful
+
+</Column>
+
+<Column colLg={8} noGutter>
+
+IBM illustrations should carry a sense of wonder and delight. While
+illustrations are primarily used to explain or convey meaning, their delivery
+can be more lighthearted at times. Lightheartedness means adding a sense of fun
+that isn't overly humorous, but spirited, charming and appropriate for the
+situation.
+
+</Column>
+
+</Row>
+</div>
