docs(Accordion): update Accordion knobs to include new props (#1923)
* docs(Accordion): update Accordion knobs to include new props

* docs(accordion): remove size variant

--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -57,7 +57,10 @@ extra click; instead use a full scrolling page with normal headers.
   ]}>
   <ComponentVariant
     id="accordion"
-    knobs={{ Accordion: ['align'], AccordionItem: ['open'] }}
+    knobs={{
+      Accordion: ['align', 'disabled'],
+      AccordionItem: ['open', 'disabled'],
+    }}
     links={{
       React:
         'http://react.carbondesignsystem.com/?path=/story/accordion--default',
