--- a/src/pages/components/accordion/code.mdx
+++ b/src/pages/components/accordion/code.mdx
@@ -60,7 +60,10 @@ usage documentation, see the Storybooks for each framework below.
   ]}>
   <ComponentVariant
     id="accordion"
-    knobs={{ Accordion: ['align'], AccordionItem: ['open'] }}
+    knobs={{
+      Accordion: ['align', 'disabled'],
+      AccordionItem: ['open', 'disabled'],
+    }}
     links={{
       React:
         'http://react.carbondesignsystem.com/?path=/story/accordion--default',
