docs(code-snippet): update style docs

--- a/src/pages/components/code-snippet/style.mdx
+++ b/src/pages/components/code-snippet/style.mdx
@@ -10,21 +10,27 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Single & multi-line
 
-| Class                       | Property         | Color token |
-| --------------------------- | ---------------- | ----------- |
-| `.bx--snippet`              | background       | `$field-01` |
-| `.bx--snippet__icon`        | color            | `$icon-01`  |
-| `.bx--snippet-button:hover` | background-color | `$hover-ui` |
-| `.bx--snippet--light`       | background-color | `$field-02` |
-| `.bx--snippet--light:hover` | background-color | `$hover-ui` |
+| Class                                           | Property         | Color token       |
+| ----------------------------------------------- | ---------------- | ----------------- |
+| `.bx--snippet`                                  | background       | `$field-01`       |
+| `.bx--snippet`                                  | color            | `$text-01`        |
+| `.bx--snippet__icon`                            | color            | `$icon-01`        |
+| `.bx--snippet-button:hover`                     | background-color | `$hover-ui`       |
+| `.bx--snippet-button:focus`                     | focus            | `$focus`          |
+| `.bx--snippet-button:active`                    | active           | `$active-ui`      |
+| `.bx--snippet--light`                           | background-color | `$field-02`       |
+| `.bx--snippet--light .bx--snippet-button:hover` | background-color | `$hover-ui-light` |
 
 ### Inline snippet
 
-| Class                        | Property         | Color token |
-| ---------------------------- | ---------------- | ----------- |
-| `.bx--snippet--inline`       | background-color | `$field-01` |
-| `.bx--snippet--inline`       | color            | `$text-02`  |
-| `.bx--snippet--inline:hover` | background-color | `$hover-ui` |
+| Class                         | Property         | Color token       |
+| ----------------------------- | ---------------- | ----------------- |
+| `.bx--snippet--inline`        | background-color | `$field-01`       |
+| `.bx--snippet--inline`        | color            | `$text-01`        |
+| `.bx--snippet--inline:hover`  | background-color | `$hover-ui`       |
+| `.bx--snippet--inline:focus`  | focus            | `$focus`          |
+| `.bx--snippet--inline:active` | active           | `$active-ui`      |
+| `.bx--snippet--light`         | background-color | `$hover-ui-light` |
 
 ### Syntax colors
 
