--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -14,9 +14,9 @@ description:
 ## Overview
 
 Users often need to create different types of assets - they can have simple or
-complex requirements. The Create pattern covers different complexities and
-formats: Simple (single step) and Multistep options, including Modal, Narrow
-Tearsheet, Wide Tearsheet, and Full-page formats.
+complex requirements. The Create pattern offers simple (single step) and complex
+(multistep) variations in one of the following formats: Modal, Side panel,
+Narrow tearsheet, Wide tearsheet, and Full-page.
 
 To create is to generate a new resource. Creating is distinct from adding, but
 the two are often confused. To add a resource is to include a resource that
@@ -25,15 +25,6 @@ This pattern focuses on how to place the user in a flow when there's a need for
 creating a new resource.
 
 Do not use this pattern for adding or editing a resource.
-
-### When to use
-
-- Creating a new resource
-
-### When not to use
-
-- Adding an existing resource
-- Editing an existing resource
 
 ## Inline creation
 
@@ -51,7 +42,7 @@ than the one where they initiated the create. For example, if the newly created
 asset is being opened or if the user is taken to a confirmation screen.
 
 For complex creation flows, such as that of a large system object, use the
-Narrow or Wide Tearsheet variations for single or multi-step options,
+Narrow or Wide tearsheet variations for single or multistep options,
 respectively.
 
 ## Modal
@@ -61,47 +52,82 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Anatomy of a single step modal](images/ModalSingleStepAnatomy.png)
+![Anatomy of a create modal](images/ModalSingleStepAnatomy.png)
 
 </Column>
 </Row>
 
-1. **Modal size & overlay:**
-   [Modal size "small"](https://www.carbondesignsystem.com/components/modal/style#small).
+1. **Modal size & overlay:** 
+   [Small size Modal](https://www.carbondesignsystem.com/components/modal/style#small).
    Screen overlay that obscures the on-page content.
-2. **Create modal title:** Title line for the create flow with an optional
+2. **Create title:** Title line for the create flow with an optional
    subtitle.
 3. **Body:** Contains the information and/or controls needed to populate the
    task. It can include message text and components.
-4. **Buttons:** The primary and secondary buttons are "Create _asset type_" and
-   "Cancel", respectively. Cancelling requires confirmation, as seen in the
-   Creation section.
-5. **Close button:** Closes the modal and cancels the create action after user
-   confirmation.
+4. **Buttons:** The primary and secondary buttons are "Create" and "Cancel",
+   respectively.
 
 ### Alignment
 
 <Row>
 <Column colLg={8}>
 
-![Alignment of a single step modal](images/ModalSingleStepAlignment.png)
+![Alignment of a create modal](images/ModalSingleStepAlignment.png)
 
 </Column>
 </Row>
 
-### When to use
+**Do:**
+- Use for simple creations with one or two form fields to be filled out.
+- Use for transitions when the user will be taken to a different page after
+  creation.
 
-- There are only one or two form fields to be filled out during a creation.
-- The user will be taken to a different page after creation.
+**Don't:**
+- Don't use a modal in place of an inline create.
+- Don't use this option if there are more than four form fields or if there is
+  scrolling inside the modal.
 
-### When not to use
+## Side panel
 
-- The create can be performed inline.
-- There are more than three form fields.
-- The fields are unrelated and should be split into steps.
-- There is scrolling inside the modal.
+### Anatomy
 
-## Narrow Tearsheet
+<Row>
+<Column colLg={8}>
+
+![Anatomy of a create side panel](images/SidePanelAnatomy.png)
+
+</Column>
+</Row>
+
+1. **Panel size & non-focus state:** Side panel is 480px wide and has no overlay. 
+   This option supports a non-focus state execution. The user can create while 
+   still referencing on-page items.
+2. **Create title:** Title line for the create flow with an optional
+   subtitle.
+3. **Body:** Contains the information and/or controls needed to populate the
+   task. It can include message text and components.
+4. **Buttons:** The primary and secondary buttons are "Create" and "Cancel",
+   respectively.
+
+### Alignment
+
+<Row>
+<Column colLg={8}>
+
+![Alignment of a create side panel](images/SidePanelAlignment.png)
+
+</Column>
+</Row>
+
+**Do:**
+- Use when the user needs to have page context while populating the side 
+  panel.
+
+**Don't:**
+- Don't use when the flow has high complexity and the user would benefit 
+  from having a visible progress indicator.
+
+## Narrow tearsheet
 
 ### Anatomy
 
@@ -113,12 +139,9 @@ respectively.
 </Column>
 </Row>
 
-1. **Panel size & overlay**: Should follow the
-   [Modal size "small"](https://www.carbondesignsystem.com/components/modal/style#small).
-   See [Narrow Tearsheet documentation](none yet). Screen overlay that obscures
-   the on-page content.
-2. **Create title**: Title line for the create flow with an optional subtitle.
-   The title will usually be "Create `asset type`".
+1. **Tearsheet & overlay**: [Narrow tearsheet component](none yet) with screen
+   overlay that obscures the on-page content.
+2. **Create title**: Title line for the create flow with an optional subtitle. 
 3. **Body**: Contains the information and/or controls needed to populate the
    task. It can include message text and components.
 4. **Buttons**: The primary and secondary buttons are "Create" and "Cancel",
@@ -134,17 +157,15 @@ respectively.
 </Column>
 </Row>
 
-### When to use
+**Do:**
+- Use as an alternative to Modal when there is scrolling.
+- The form fields can be broken down into sections using section headers.
 
-- There are more fields than can fit into the modal without scrolling.
-- The steps can be broken down into sections or chapters.
+**Don't:**
+- Don't use this option if the flow has high complexity and the user would 
+  benefit from having a visible progress indicator.
 
-### When not to use
-
-- The flow has high complexity and the user would benefit from having a visible
-  progress indicator.
-
-## Wide Tearsheet
+## Wide tearsheet
 
 ### Anatomy
 
@@ -156,12 +177,11 @@ respectively.
 </Column>
 </Row>
 
-1. **Tearsheet & overlay**: [Tearsheet component](none yet) with screen overlay
+1. **Tearsheet & overlay**: [Wide tearsheet component](none yet) with screen overlay
    that obscures the on-page content.
 2. **Create title**: Title line for the create flow with an optional subtitle.
-   The title will usually be "Create `asset type`".
 3. **Progress indicator**: Vertical progress indicator lets the user know what
-   step they are on. The default left panel width is 256px. An option of 310px
+   step they are on. The default left panel width is 256px. An option of 320px
    wide is available for use cases where step labels are very long.
 4. **Toggle (Optional)**: Optional toggle allows the user to view all available
    options in one scrolling page with anchor links.
@@ -228,19 +248,15 @@ below._
 </Column>
 </Row>
 
-### When to use
+**Do:**
+- Use with creations that have two or more distinct steps.
 
-- The create flow is complex, with two or more distinct steps.
-- There are many form fields to be filled out.
-
-### When not to use
-
-- The create flow has low complexity.
-- There is only one step.
+**Don't:**
+- Don't use the Wide tearsheet for low complexity create flows with only one step.
 
 ### Behaviors, structure and functionality
 
-Tearsheet Create flows can include an optional Toggle to show all the steps on a
+Wide tearsheet Create flows can include an optional Toggle to show all the steps on a
 single scrolling page with anchor links. Toggling to "Show all available
 options" will replace the progress indicator with the In-page navigation anchor
 links. Depending on your use case, you may choose to persist the toggle to show
@@ -279,11 +295,11 @@ the changes won't be saved.
 2. **Page title**: The page title will not necessarily be "Create `asset type`".
 3. **Create title**: This title will usually be "Create `asset type`".
 4. **Progress indicator**: Vertical progress indicator lets the user know what
-   step they are on. The default left panel width is 256px. An option of 310px
+   step they are on. The default left panel width is 256px. An option of 320px
    wide is available for use cases where step labels are very long.
 5. **Body**: Contains the information and/or controls needed to populate the
    task. It can include message text and components.
-6. **Toggle (Optional)**: Optional toggle allows the user to view all available
+6. **Toggle (optional)**: Optional toggle allows the user to view all available
    options in one scrolling page with anchor links.
 7. **Buttons**: The primary, secondary, and ghost buttons are 64px tall fluid
    buttons. They are "Next", "Back" and "Cancel", respectively. The "Back"
@@ -313,17 +329,15 @@ below._
 </Column>
 </Row>
 
-### When to use
-
-- In Cloud and Cognitive, the create flow is the process the user must complete
-  in order to use a product or service.
+**Do:**
+- In Cloud and Cognitive, the Full-page create flow is the process the user 
+  must complete in order to use a product or service.
 - In IBM Cloud public, it is the alternative to the Provisioning flow for a
   non-billable service.
 
-### When not to use
-
-- The product or service is usable before the current creation flow is
-  initiated.
+**Don't:**
+- Don't use the Full-page option when the product or service is usable before 
+  the current creation flow is initiated.
 - For IBM Public Cloud, do not use this when provisioning a service directly
   from the Catalog, or when creating a non-billable resource that could happen
   in a side panel/in context.
@@ -368,18 +382,6 @@ asset's details page. But when the user stays on the same page, show a success
 banner notification. For errors, you must show an
 [error notification](https://www.carbondesignsystem.com/components/notification/usage/).
 
-### Best practices
-
-#### Do
-
-- TBD
-- TBD
-
-#### Don't
-
-- TBD
-- TBD
-
 ### Other use cases
 
 #### Add
@@ -396,11 +398,7 @@ banner notification. For errors, you must show an
 
 ## Accessibility
 
-Evaluate your pattern to ensure it meets
-[accessibility standards](/guidelines/accessibility/overview) and guidelines,
-and provide details of compliance. For example, “Users should be able to TAB
-into the input field of the search box to begin typing and press ENTER to run
-the search query.”
+Should follow the accessibility guidelines for [Modal](https://www.carbondesignsystem.com/components/modal/accessibility), Side panel, Narrow tearsheet, Wide tearsheet, [Forms](https://www.carbondesignsystem.com/patterns/forms-pattern#accessibility), and [Progress indicator](https://www.carbondesignsystem.com/components/progress-indicator/accessibility).
 
 ## Related
 
@@ -408,11 +406,10 @@ the search query.”
 - Narrow Tearsheet
 - Wide Tearsheet
 - [Form](https://www.carbondesignsystem.com/patterns/forms-pattern/)
-- Toggle
-- Page header
-- In-page navigation
+- [Toggle](https://www.carbondesignsystem.com/components/toggle/usage)
+- [Page header](https://pages.github.ibm.com/cdai-design/pal/components/page-header/usage)
 - [Progress indicator](https://www.carbondesignsystem.com/components/progress-indicator/usage)
-- Sticky footer (TBD)
+- Sticky footer
 
 ## References 
 
