Add inline create example

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -10,6 +10,7 @@ description:
 #### Maintainers:
 
 [Andrew Smith](https://w3.ibm.com/bluepages/profile.html?uid=4G8681897)
+[Andrea Garcia](https://w3.ibm.com/bluepages/profile.html?uid=4G0746897)
 
 ## Overview
 
@@ -31,10 +32,10 @@ Do not use this pattern for adding or editing a resource.
 With quick, simple creations like that of an item, it is usually preferred to
 keep the flow inline. This is especially true when the user could benefit from
 seeing context in the page while creating. The inline create pattern is under
-construction, as it needs to account for many different use cases. Below are
-some examples of inline create for temporary reference.
+construction, as it needs to account for many different use cases. Below is
+an example of an inline creation.
 
-_Examples to be added here_
+![Example creating a tab inline](images/InlineCreateExample.gif)
 
 Another factor to consider with quick, simple creations is whether or not the
 flow is transitional. Use a Modal if the user is being taken to a different page
