--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -35,7 +35,14 @@ seeing context in the page while creating. The inline create pattern is under
 construction, as it needs to account for many different use cases. Below is
 an example of an inline creation.
 
-![Example creating a tab inline](images/InlineCreateExample.gif)
+<Row>
+<Column colLg={8}>
+
+![Animated inline create example](images/InlineCreateExample.gif)
+
+<Caption>Example of an inline create</Caption> 
+</Column>
+</Row>
 
 Another factor to consider with quick, simple creations is whether or not the
 flow is transitional. Use a Modal if the user is being taken to a different page
@@ -58,8 +65,8 @@ respectively.
 </Column>
 </Row>
 
-1. **Modal size & overlay:** 
-   [Small size Modal](https://www.carbondesignsystem.com/components/modal/style#small).
+1. **Modal size & overlay: ** 
+   [Small Modal](https://www.carbondesignsystem.com/components/modal/style#small).
    Screen overlay that obscures the on-page content.
 2. **Create title:** Title line for the create flow with an optional
    subtitle.
@@ -78,12 +85,14 @@ respectively.
 </Column>
 </Row>
 
-**Do:**
+#### Do:
+
 - Use for simple creations with one or two form fields to be filled out.
 - Use for transitions when the user will be taken to a different page after
   creation.
 
-**Don't:**
+#### Don't:
+
 - Don't use a modal in place of an inline create.
 - Don't use this option if there are more than four form fields or if there is
   scrolling inside the modal.
@@ -120,11 +129,13 @@ respectively.
 </Column>
 </Row>
 
-**Do:**
+#### Do:
+
 - Use when the user needs to have page context while populating the side 
   panel.
 
-**Don't:**
+#### Don't:
+
 - Don't use when the flow has high complexity and the user would benefit 
   from having a visible progress indicator.
 
@@ -140,7 +151,7 @@ respectively.
 </Column>
 </Row>
 
-1. **Tearsheet & overlay**: [Narrow tearsheet component](none yet) with screen
+1. **Tearsheet & overlay**: Narrow tearsheet component with screen
    overlay that obscures the on-page content.
 2. **Create title**: Title line for the create flow with an optional subtitle. 
 3. **Body**: Contains the information and/or controls needed to populate the
@@ -158,11 +169,13 @@ respectively.
 </Column>
 </Row>
 
-**Do:**
+#### Do:
+
 - Use as an alternative to Modal when there is scrolling.
 - The form fields can be broken down into sections using section headers.
 
-**Don't:**
+#### Don't:
+
 - Don't use this option if the flow has high complexity and the user would 
   benefit from having a visible progress indicator.
 
@@ -178,7 +191,7 @@ respectively.
 </Column>
 </Row>
 
-1. **Tearsheet & overlay**: [Wide tearsheet component](none yet) with screen overlay
+1. **Tearsheet & overlay**: Wide tearsheet component with screen overlay
    that obscures the on-page content.
 2. **Create title**: Title line for the create flow with an optional subtitle.
 3. **Progress indicator**: Vertical progress indicator lets the user know what
@@ -193,40 +206,66 @@ respectively.
    The "Next" button will change to "Create" on the last step of creation.
    "Cancel" closes the tearsheet and cancels the create action.
 
-_Note: Coming soon from Carbon, 80px tall fluid buttons will be the new standard
+<InlineNotification>
+Coming soon from Carbon, 80px tall fluid buttons will be the new standard
 replacing the 64px fluid buttons in the bottom sticky footer. Image reference
-below._
+below.
+</InlineNotification>
 
-<Row>
-<Column colLg={5}>
-
-![New carbon button heights in the wide tearsheet](images/Wide-tearsheet-3.png)
-
-<Caption>New carbon button heights in the wide tearsheet</Caption>
-</Column>
-</Row>
 <Row>
 <Column colLg={8}>
 
-![Alternative left panel width](images/Wide-tearsheet-4.png)
+![Upcoming 80px fluid button height in the wide tearsheet](images/Wide-tearsheet-3.png)
 
-<Caption>Alternative left panel width</Caption>
+<Caption>Upcoming 80px fluid button height in the wide tearsheet</Caption>
 </Column>
 </Row>
+
 <Row>
 <Column colLg={8}>
 
-![Toggle view - show all available actions](images/Wide-tearsheet-5.png)
+![Alternative left panel width of 320px](images/Wide-tearsheet-4.png)
 
-<Caption>Toggle view - show all available actions</Caption>
+<Caption>Alternative left panel width of 320px</Caption>
 </Column>
 </Row>
+
+### Alignment
+
 <Row>
 <Column colLg={8}>
 
-![Toggle view - show all available actions warning modal](images/Wide-tearsheet-6.png)
+![Wide tearsheet alignment](images/Wide-tearsheet-7.png)
 
-<Caption>Toggle view - show all available actions warning modal</Caption>
+</Column>
+</Row>
+
+#### Do:
+
+- Use with creations that have two or more distinct steps.
+
+#### Don't:
+
+- Don't use the Wide tearsheet for low complexity create flows with only one step.
+
+### Behaviors, structure and functionality
+
+Wide tearsheet Create flows can include an optional Toggle to show all the steps on a
+single scrolling page with anchor links. Toggling to "Show all available
+options" will replace the progress indicator with the In-page navigation anchor
+links. Depending on your use case, you may choose to persist the toggle to show
+all options for a particular Create flow if it will enhance the user
+experience.
+
+If the user toggles off the advanced options, show a modal alerting them that
+the changes won't be saved.
+
+<Row>
+<Column colLg={8}>
+
+![Toggle view - show all available options](images/Wide-tearsheet-5.png)
+
+<Caption>Toggle view - show all available options</Caption>
 </Column>
 </Row>
 
@@ -239,39 +278,12 @@ below._
    on top. The form content appears from underneath the sticky footer. There is
    no gradient.
 
-### Alignment
-
 <Row>
 <Column colLg={8}>
 
-![Wide tearsheet alignment](images/Wide-tearsheet-7.png)
+![Toggle view - hide all available options warning modal](images/Wide-tearsheet-6.png)
 
-</Column>
-</Row>
-
-**Do:**
-- Use with creations that have two or more distinct steps.
-
-**Don't:**
-- Don't use the Wide tearsheet for low complexity create flows with only one step.
-
-### Behaviors, structure and functionality
-
-Wide tearsheet Create flows can include an optional Toggle to show all the steps on a
-single scrolling page with anchor links. Toggling to "Show all available
-options" will replace the progress indicator with the In-page navigation anchor
-links. Depending on your use case, you may choose to persist the toggle to show
-all options for a particular Create flow if it will enhance the user
-experience.  
-If the user toggles off the advanced options, show a modal alerting them that
-the changes won't be saved.
-
-<Row>
-<Column colLg={8}>
-
-![Toggle view - show all available actions warning modal](images/Wide-tearsheet-6.png)
-
-<Caption>Toggle view - show all available actions warning modal</Caption>
+<Caption>Toggle view - hide all available options warning modal</Caption>
 </Column>
 </Row>
 
@@ -308,15 +320,18 @@ the changes won't be saved.
    "Create" on the last step of creation. "Cancel" takes the user to the
    previous page and cancels the create action.
 
-_Note: Coming soon from Carbon, 80px tall fluid buttons will be the new standard
+<InlineNotification>
+Coming soon from Carbon, 80px tall fluid buttons will be the new standard
 replacing the 64px fluid buttons in the bottom sticky footer. Image reference
-below._
+below.
+</InlineNotification>
 
 <Row>
-<Column colLg={6}>
+<Column colLg={8}>
 
-![Full page anatomy with new Carbon button size](images/Full-page-2.png)
+![Upcoming 80px fluid button height in the Full-page flow](images/Full-page-2.png)
 
+<Caption>Upcoming 80px fluid button height in the Full-page flow</Caption>
 </Column>
 </Row>
 
@@ -330,13 +345,15 @@ below._
 </Column>
 </Row>
 
-**Do:**
+#### Do:
+
 - In Cloud and Cognitive, the Full-page create flow is the process the user 
   must complete in order to use a product or service.
 - In IBM Cloud public, it is the alternative to the Provisioning flow for a
   non-billable service.
 
-**Don't:**
+#### Don't:
+
 - Don't use the Full-page option when the product or service is usable before 
   the current creation flow is initiated.
 - For IBM Public Cloud, do not use this when provisioning a service directly
@@ -363,14 +380,14 @@ guidance around button types does not specify when to use tertiary versus ghost
 buttons. This guideline will be updated as we get more clarity.
 
 After clicking on the new button, the user then fills out a form in one of the
-above formats: with one step or multiple steps. With multiple steps, the "Back"
+above formats with one step or multiple steps. With multiple steps, the "Back"
 button is disabled in the first step. In the last step, the text of the primary
 button changes from "Next" to "Create". The "Next" and "Create" buttons should
 be disabled until the user has entered all required fields.
 
-The Modal, Narrow Tearsheet and Wide Tearsheet components in the create flow
-will not have a close icon in the top right. This is to enforce the user's
-decision to exit the create flow by clicking on the word "Cancel".
+The Modal, Side panel, Narrow tearsheet and Wide tearsheet components in a
+create flow will not have a close icon in the top right. This is to enforce
+the user's decision to exit the create flow by clicking on the word "Cancel".
 
 When the user clicks "Create" there should be an indication of loading or
 submitting. See Carbon's
@@ -379,7 +396,7 @@ pattern. Also, see specific guidance for
 [loading in the Modal component](https://www.carbondesignsystem.com/components/modal/usage#loading).
 Once the loading is complete, the user should see a success or error
 notification. For success, one option is to open the newly created asset or the
-asset's details page. But when the user stays on the same page, show a success
+asset's details page. When the user stays on the same page, show a success
 banner notification. For errors, you must show an
 [error notification](https://www.carbondesignsystem.com/components/notification/usage/).
 
@@ -399,13 +416,17 @@ banner notification. For errors, you must show an
 
 ## Accessibility
 
-Should follow the accessibility guidelines for [Modal](https://www.carbondesignsystem.com/components/modal/accessibility), Side panel, Narrow tearsheet, Wide tearsheet, [Forms](https://www.carbondesignsystem.com/patterns/forms-pattern#accessibility), and [Progress indicator](https://www.carbondesignsystem.com/components/progress-indicator/accessibility).
+Follows accessibility guidelines for 
+[Modal](https://www.carbondesignsystem.com/components/modal/accessibility), 
+Side panel, Narrow tearsheet, Wide tearsheet, 
+[Forms](https://www.carbondesignsystem.com/patterns/forms-pattern#accessibility), 
+and [Progress indicator](https://www.carbondesignsystem.com/components/progress-indicator/accessibility).
 
 ## Related
 
 - [Modal](https://www.carbondesignsystem.com/components/modal/usage/)
-- Narrow Tearsheet
-- Wide Tearsheet
+- Narrow tearsheet
+- Wide tearsheet
 - [Form](https://www.carbondesignsystem.com/patterns/forms-pattern/)
 - [Toggle](https://www.carbondesignsystem.com/components/toggle/usage)
 - [Page header](https://pages.github.ibm.com/cdai-design/pal/components/page-header/usage)
