feat: animate error text replacing helper text (#1916)
* swap input text error png for gif

* swap pattern form error text png to gif

* swap dropdown helper text png to gif

* swap select helper text png to gif

* Update src/pages/components/select/usage.mdx

Fix tooltip title for select invalid state gif

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Delete dropdown-usage-14.gif

Changing helper/error text to 'user' from 'project'.

* Add dropdown-usage-14.gif

Changing helper/error text to 'user' from 'project'.

* Delete select-usage-1.gif

Changing helper text to 'user' from 'project'.

* Add fixed select-usage-1.gif

Changing helper text to 'user' from 'project'.

* Delete dropdown-usage-9a.png

Fix helper text to show 'user' instead of 'project'.

* Delete dropdown-usage-9b.png

Fix helper text to show 'user' instead of 'project'.

* Add dropdown-usage-9a.png

Fix helper text to show 'user' instead of 'project'.

* Add dropdown-usage-9b.png

Fix helper text to show 'user' instead of 'project'.

Co-authored-by: emyarod <emyarod@users.noreply.github.com>
Co-authored-by: Alessandra Davila <aledavila@ibm.com>

--- a/src/pages/components/select/usage.mdx
+++ b/src/pages/components/select/usage.mdx
@@ -158,7 +158,7 @@ the user is filling out forms. For full guidelines, refer to the
 <Row>
 <Column colLg={8}>
 
-![Example of a small select](images/select-usage-1.png)
+![Select invalid state](images/select-usage-1.gif)
 
 </Column>
 </Row>
