draft notes added

--- a/src/pages/all-about-carbon/case-studies/ibmcom-case-study.mdx
+++ b/src/pages/all-about-carbon/case-studies/ibmcom-case-study.mdx
@@ -27,39 +27,131 @@ of the new self-service purchase experience on IBM.com.
 
 ## Executive summary
 
-placeholder
+This section provides a succinct and effective summary that is quick to read,
+and covers the key highlights and takeaways.
 
 ## The challenge
 
-(CIO goals, research, marketshare info)
+### Project goals
+
+Deliver a touchless experience. Make it super easy and intuitive for a user to
+find the product they need and quickly and effectively make a purchase.
+
+- 25% NPS improvement
+- Decrease clicks
+- Decrease page load time
+- Increase device compatibility
+- Drive down time spent on a page
+
+Two bullets directly addressed by Carbon refresh — which ones?
+
+The overarching goals of the CIO squad tied directly with what the design group
+proposed.
+
+### Testing and research
+
+From testing, knew there were inherent usability issues in the checkout process.
+Problems we knew about on the page: — too many choices
+
+- too much information on the page
+- not intuitive
+- no clear message
+- the flow was difficult to control
+- cumbersome
+- editing was difficult
+
+Looking at the metrics — if we could improve the overall user experience from
+the start of configuring the quote all the way through to the purchase, every
+0.1% improvement in purchase conversion is worth \$1M.
+
+Many small improvements together could have a big impact to company revenue.
+
+### Marketshare info
+
+If we did nothing, what would happen?
+
+— our competition was outperforming us in terms of conversion — behind on the
+eCommerce marketplace, on the market share — customer quotes and research —> our
+customers said they found it unreliable, not able to quickly and efficiently
+find what they wanted, so they were abandoning our flow.
 
 ## Proposed solution
 
 (incremental improvements = increases to revenue)
 
+Looking at the end-to-end flow. A waterflow that shows all the tactics that
+could be undertaken in order to increase conversion, at each step of the
+customer journey. See where customers are dropping off across the flow.
+
+- insert image "example of metrics"
+
+Carbon implementation addresses a core percentage of the pages that we're trying
+to support.
+
+If we could improve these pages especially for returning users, can easily find
+earlier work, then this a win-win for everyone.
+
+Knew what they would get from the Carbon refresh
+
+- be better for the user
+- wouldn't get lost in the flow,
+- could find what they need,
+- less likely to defect
+
+Will it grow revenue? Funnel analysis beforehand made it clear that even small
+improvements would improve revenue dramatically. (Outcomes slide)
+
+Carbon refresh directly maps to the CIO business goal of the touchless user
+experience
+
+Refresh configuration and improve ease of use for returning customers, increase
+conversion
+
+Very high drop-off percentages from when a customer started their configuration.
+
+Only 8% completion.
+
+Lot of room to make a big improvement. Increase conversions by a few
+percentages.
+
+**Results**
+
+Before Carbon 38% of customers were converting to purchase (not sure from
+where). Not even half were starting and finishing.
+
+71% of US customers were converting, but other top 5 five countries were much
+lower
+
+By Carbon refresh globally, could increase global metrics as well. Important to
+everyone.
+
+- compelling metrics slide a little hard to read
+
 ## The approach
 
-- Took on Carbon as an iterative process. Rolled it out slowly. Tactfully and
-  tastefully. Shixie working closely with the development squad.
-- Do it iteratively, see what is moving the needle, taking those experiences and
-  expanding across the platform as we learn more.
+Took on Carbon as an iterative process. Rolled it out slowly. Tactfully and
+tastefully. Shixie working closely with the development squad.
+
+Do it iteratively, see what is moving the needle, taking those experiences and
+expanding across the platform as we learn more.
+
+Mapped out an adoption process — the logic of what we wanted to do first and how
+we tried to approach the whole problem.
 
 ### Start small
 
-\*\* We could do a motion of the image Shixie shows. New modal sitting on an
-older page.
+Started small with a modal that pops up to get the team used to using Carbon
 
-- Started small with a modal that pops up to get the team used to using Carbon
-  - "Instead of reskinning existing elements, we identified high value,
-    self-contained, new features to develop in Carbon from scratch."
-  - Team not worried about breaking something in production, safe place to
-    experiment and ship, and see results, this way they wouldn't be losing as
-    much money if the feature broke something
-  - Took about a month because the team was new to Carbon
-  - Not very disruptive to have the new modal on the old page
-  - It's okay to ship out pieces iteratively. Encourage people to mix
-    experiences to eventually get to the final result faster, otherwise flipping
-    the switch on everything at once takes too long and can be risky.
+- Instead of reskinning existing elements, we identified high value,
+  self-contained, new features to develop in Carbon from scratch.
+- Team not worried about breaking something in production, safe place to
+  experiment and ship, and see results, this way they wouldn't be losing as much
+  money if the feature broke something
+- Took about a month because the team was new to Carbon
+- Not very disruptive to have the new modal on the old page
+- It's okay to ship out pieces iteratively. Encourage people to mix experiences
+  to eventually get to the final result faster, otherwise flipping the switch on
+  everything at once takes too long and can be risky.
 
 ### Design system education
 
@@ -71,15 +163,41 @@ older page.
 
 ### Mix new with old
 
+Started with a fresh feature. A safe place to experiment with Carbon and ship
+right away. It took about a month because the team was new to Carbon.
+
+Mixed the new modal is sitting on the old page. It's not too disruptive.
+
+Note - We could do a motion of the image Shixie shows. New modal sitting on an
+older page.
+
+It's okay to ship out pieces iteratively. Encourage people to mix experiences to
+eventually get to the final result faster, otherwise flipping the switch on
+everything at once takes too long and can be risky.
+
+Another feature that was good to isolate and sandbox from the flow. Confirmation
+page after the user has checked out successfully — redesigned the experience to
+be simplified. Removing redundant information from the screen that would be in
+an email etc.
+
+It was an isolated place to get the team on board with Carbon. It was a way to
+get people used to using Carbon. And in the following example, getting
+comfortable with the grid in particular.
+
 ### Plan for iterations
 
-- iterative process, done in passes
-  - switching fields into Carbon fields, but maintaining the structure
-  - then the buttons change
-  - at some point, people may not even notice that the complete experience has
-    changed, setting the stage for next gen proposal
-- didn't have a screenshot of the page in its old layout before it was moved to
-  3 sections
+Iterative process to implement. Changing the layout of the pages. Done in small
+passes:
+
+- switching fields into Carbon fields, but maintaining the structure
+- then the buttons change
+- at some point, people may not even notice that the complete experience has
+  changed, setting the stage for next gen proposal
+
+- Checkout page example
+
+- Order confirmation page example The entire Carbonation process took only three
+  months. And it's a complicated application
 
 ## Benefits
 
@@ -90,24 +208,35 @@ faster when we started using straight-up Carbon
 
 ### Minimal QA
 
-Minimal design QA because many components were straight out of the box
+Minimal design QA because many components were straight out of the box.
+Developers liked very much that Carbon components could be used straight of out
+of the box.
 
 ### Continuity in experience
 
 Improved continuity in user experience from previous IBM touch points — Support,
 My IBM. A lot of these experiences will now feel continuous and intuitive.
 
+You can see with these pages, that now there is a real continuity of experience
+for the users.
+
+They are all organized in the exact same way. There's familiarity and a feeling
+of dependability.
+
 Looks great!
 
 ## Positive outcomes
 
-- Since launch in march, 53% of customers are converting to purchase post-carbon
+- Since launch in March, 53% of customers are converting to purchase post-carbon
   (was 48%)
-- U.S. conversation are relatively flat but the other top 5 countries
-  (Australia, UK, Ireland, Canada, South Korea) are all converting at +3% or +4%
-  higher
+- U.S. conversions are relatively flat but the other top 5 countries (Australia,
+  UK, Ireland, Canada, South Korea) are all converting at +3% or +4% higher
 - 0.1% increase is the entire process from pricing to order complete, 5% is from
   checkout to order purchase (only a few screens)
+
+### User feedback quotes
+
+Maybe work out a way to include user quotes in here.
 
 ## Next steps
 
