--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -18,7 +18,7 @@ contrast color.
 | `.bx--content-switcher-btn` | background-color | `$ui-01`    |
 | `.bx--content-switcher-btn` | text color       | `$text-02`  |
 | `--selected`                | background-color | `$ui-05`    |
-| `--selected`                | text color       | `$text-04`  |
+| `--selected`                | text color       | `$inverse-01` |
 | `:after`                    | divider          | `$ui-03`    |
 
 ### Interactive states
